structure reform + blog detail page design modified.

--- a/static/css/blog-details.css
+++ b/static/css/blog-details.css
@@ -21,7 +21,7 @@
 
 /* Blog Meta Information */
 .blog-meta {
-    border-bottom: 1px solid #eee;
+    /* border-bottom: 1px solid #eee; */
     padding-bottom: 20px;
     margin-bottom: 25px;
 }
