--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 
 <body class="home-one">
     <!-- Start Header Area -->
-    {% include 'glrdesign/includes/header.html' %}
+    {% include 'includes/header.html' %}
     <!-- End Header Area -->
 
     <!-- Start Main Content Area -->
@@ -32,11 +32,11 @@
     <!-- End Main Content Area -->
 
     <!-- Start Footer Area -->
-    {% include 'glrdesign/includes/footer.html' %}
+    {% include 'includes/footer.html' %}
     <!-- End Footer Area -->
 
     <!-- Start Script Area -->
-    {% include 'glrdesign/includes/scripts.html' %}
+    {% include 'includes/scripts.html' %}
     <!-- End Script Area -->
 
     {% block extra_js %}{% endblock %}
