--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -1,4 +1,4 @@
-{% extends 'glrdesign/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
 {% block title %}Blog Details - Personal Blog and Magazine HTML Template{% endblock %}
