--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'glrdesign/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
 {% block title %}Personal Blog and Magazine HTML Template{% endblock %}
