--- a/templates/column-layout-grid.html
+++ b/templates/column-layout-grid.html
@@ -1,4 +1,4 @@
-{% extends 'glrdesign/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
 {% block title %}Column Layout Grid - Personal Blog and Magazine HTML Template{% endblock %}
