--- a/templates/error.html
+++ b/templates/error.html
@@ -1,4 +1,4 @@
-{% extends 'glrdesign/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
 {% block title %}404 Error - Page Not Found{% endblock %}
