--- a/templates/includes/scripts.html
+++ b/templates/includes/scripts.html
@@ -11,3 +11,10 @@
 
 <!-- main js file -->
 <script src="{% static 'js/main.js' %}" defer></script>
+<!-- SweetAlert2 -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<!-- Toastr -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
